# plex-media-organizer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_DEPLOYMENT.md  LICENSE  Makefile  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  RELEASE_v1.0.0.md  RUST_2024_MIGRATION.md  config_example.toml  debug_parsing.rs  env.example  setup-github.sh  test_refactoring.rs
.cursor/rules/: readme.mdc  rename.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  general_issue.md  wrong_organization.yml
.github/workflows/: README.md  ci.yml  ci.yml.backup  nightly.yml  nightly.yml.backup  pr-checks.yml  quality.yml  release.yml  scheduled-tests.yml
benches/: performance.rs
config/: default.toml  default_config.toml
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  DEVELOPMENT_WORKFLOW.md  IMPLEMENTATION_ROADMAP.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PHASE_1_COMPLETE.md  PHASE_1_REVIEW.md  PHASE_1_SUMMARY.md  PR_PERFORMANCE_OPTIMIZATION_DESCRIPTION.md  README.md  SECURITY.md  codebase-analysis.md  installation.md  quick-start.md  refactoring-cross-reference.md  troubleshooting.md  user-guide.md
docs/analysis/: README.md  current-issues.md  current-limitations.md  status.md  tmdb_matching_challenges.md
docs/architecture/: filename-parsing-strategy.md  roadmap.md
docs/developer/: DOCUMENTATION_STATUS.md  README.md  documentation-standards.md  git-practices.md  release-process.md
docs/development/: ITERATION_1_FORMAL_REVIEW.md  ITERATION_2_IMPLEMENTATION_PLAN.md  ITERATION_2_PLAN.md  README.md  config_optimization_plan.md  network-optimization.md
docs/user/: README.md  configuration.md  features.md  getting-started.md  installation.md  parsing-strategy.md  user-guide.md
docs/user-guide/: cli-commands.md  configuration-migration.md  configuration.md  features.md  technical-terms.md
docs/user-guides/: configuration.md  quick-start.md
project/: README.md  architecture.md  config_design_assessment.md  config_optimization_plan.md  edge_cases_analysis.md  roadmap.md  status.md
project/decisions/: 001-iterative-development.md
project/planning/: development-guidelines.md
project/retrospectives/: README.md
scripts/: detailed-analysis.sh  generate_test_files.sh  pattern-summary.sh  quality-check.sh  test-real-world-data.sh
src/: cli.rs  config.rs  config.rs.backup  enricher.rs  filename_parser.rs  lib.rs  main.rs  metadata_extractor.rs  models.rs  movie_parser.rs  organizer.rs  parser.rs  scanner.rs  subtitles.rs  tmdb.rs  tmdb_client.rs  types.rs  utils.rs
src/cli/: commands.rs  mod.rs  output.rs
src/core/: mod.rs  organizer.rs  processor.rs  scanner.rs
src/database/: cache.rs  connection.rs  mod.rs  movies.rs  operations.rs  schema.rs
src/media/: extractor.rs  mod.rs  types.rs
src/parsers/: mod.rs  movie.rs  types.rs  unified.rs
test-data/: README.md
test_data/: README.md  movie_directory.txt
tests/: README.md  basic_parsing.rs  debug_chinese_improvements.rs  debug_chinese_parsing.rs  debug_config_loading.rs  debug_current_issues.rs  debug_english_movies.rs  debug_english_parsing.rs  debug_enhanced_search.rs  debug_i_robot.rs  debug_moneyball.rs  debug_parsing_detailed.rs  debug_skipped_movies.rs  dynamic_real_world.rs  dynamic_real_world_test.rs  edge_case_detector.rs  edge_case_scanner.rs  filename_parsing_integration.rs  parsing_regression.rs  plex_directory_structure_test.rs  real_world_patterns.rs  real_world_patterns_test.rs  rollback_integration.rs  rollback_integration_test.rs  test_utils.rs
(+44 files in other folders)
