[package]
name = "plex-media-organizer"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Intelligent media file organizer following Plex naming conventions"
license = "MIT"
repository = "https://github.com/lijunzh/plex-media-organizer"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

# Configuration
toml = "0.8"
config = "0.13"

# HTTP client for TMDB API
reqwest = { version = "0.11", features = ["json"] }

# Media file metadata extraction
mp4parse = "0.12"
id3 = "1.7"
matroska = "0.5"

# Database (SQLite)
rusqlite = { version = "0.29", features = ["bundled"] }

# File system operations
walkdir = "2.3"
pathdiff = "0.2"
rayon = "1.8"

# CLI and user interface
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
regex = "1.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }

# Fuzzy search for better TMDB matching
fuzzy-matcher = "0.3"
md5 = "0.8.0"

[dev-dependencies]
tempfile = "3.6"
assert_fs = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "plex-media-organizer"
path = "src/main.rs"

[lib]
name = "plex_media_organizer"
path = "src/lib.rs"
