[package]
name = "plex-media-organizer"
version = "0.1.1"
edition = "2024"
authors = ["Lijun Zhu <gatechzhu@gmail.com>"]
description = "Intelligent media file organizer following Plex naming conventions"
license = "MIT"
repository = "https://github.com/lijunzh/plex-media-organizer"
readme = "README.md"
keywords = ["plex", "media", "organizer", "movies", "cli"]
categories = ["command-line-utilities", "multimedia", "filesystem"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "fs", "net", "io-util"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"
config = "0.13"

# HTTP client for TMDB API
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
regex = "1.8"
dirs = "5.0"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.6"

[[bin]]
name = "plex-media-organizer"
path = "src/main.rs"

[lib]
name = "plex_media_organizer"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true
