[package]
name = "plex-media-organizer"
version = "0.2.0"
edition = "2021"
authors = ["Lijun Zhu"]
description = "Organize torrent-downloaded media into Plex-compatible folder structures"
license = "MIT"
repository = "https://github.com/lijunzh/plex-media-organizer"
homepage = "https://github.com/lijunzh/plex-media-organizer"
keywords = ["plex", "media", "organizer", "movies", "tv-shows"]
categories = ["command-line-utilities", "multimedia"]
readme = "README.md"

[dependencies]
hunch = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "plex-org"
path = "src/main.rs"

[lib]
name = "plex_media_organizer"
path = "src/lib.rs"
